@startuml classDiagram
skinparam classAttributeIconSize 0
skinparam Style strictuml

' --- Master Layer ---

class Users {
  + idUser : int
  ..
  + email : varchar(50)
  - password : varchar(255)
  + login() : bool
}

class Semester {
  + idSemester : int
  ..
  + tahunAjaran : varchar(50)
  + tambah() : void
}

class Karyawan {
  + idKaryawan : int
  ..
  + namaKaryawan : string
  + getKaryawan() : list
}

class Gedung {
  + idGedung : int
  ..
  + namaGedung : varchar(50)
  + tambahGedung() : void
}

class Ruangan {
  + idRuangan : int
  + idGedung : int
  ..
  + namaRuangan : varchar(50)
  + getRuangan() : list
}

class Barang {
  + idBarang : int
  + stok : int
  + tipeBarang : bit
  + idMerk : int
  ..
  + namaBarang : varchar(100)
  + cekStok() : int
}

' --- Transaction Layer ---

class DetailBarang {
  + idDetailBarang : int
  + idBarang : int
  + idRuangan : int
  ..
  + spesifikasi : varchar(500)
  + getDetail() : list
}

class PermintaanBarang {
  + idPermintaanBarang : int
  + idBarang : int
  + idRuangan : int
  + jumlah : int
  + tglPermintaan : date
  + idSemester : int
  ..
  + namaPeminta : string
  + simpan() : void
}

class Maintenance {
  + idMaintenance : int
  + idKaryawan : int
  + idDetailBarang : int
  + tglCek : date
  + kondisi : bit
  + idSemester : int
  ..
  + kerusakan : varchar(100)
  + tindakLanjut : varchar(100)
  + simpan() : void
}

class Merk {
  + idMerk : int
  ..
  + namaMerk : varchar(50)
  + tambahMerk() : void
}


' --- Relasi Sesuai SQL ---

Gedung "1" -- "*" Ruangan : memiliki >
Ruangan "1" -- "*" DetailBarang : lokasi >
Barang "1" -- "*" DetailBarang : memiliki >

Barang "1" -- "*" PermintaanBarang : diminta >
Ruangan "1" -- "*" PermintaanBarang : lokasi >
Semester "1" -- "*" PermintaanBarang : periode >

Karyawan "1" -- "*" Maintenance : mengecek >
DetailBarang "1" -- "*" Maintenance : dirawat >
Semester "1" -- "*" Maintenance : periode >

Merk "1" -- "*" Barang : klasifikasi >

@enduml